--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
